Dummy.Database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: database
  template: 
    metadata:
      labels:
        app: database
    spec: 
      containers: 
      - name: database
        image: mariadb
        ports:
        - containerPort: 3306
